feat: :sparkles: comentario agregado

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
             <img class="totoroWhite" src="img/totoroSmall.png" alt="">
 
             <div id="eyes">
-                <img src="img/eyestotoro.png" alt="" class="eye" style="bottom: 64px; left: 38px;">
-                <img src="img/eyestotoro.png" alt="" class="eye" style="bottom: 64px; right: 22px;">
+                <img src="img/eyestotoro.png" alt="" class="eye" style="bottom: 64px; left: 38px;"><!--posicion ojos || position eyes-->
+                <img src="img/eyestotoro.png" alt="" class="eye" style="bottom: 64px; right: 22px;"><!--posicion ojos || position eyes-->
             </div>
         </div>
     </main>
-
 
 </body>
 <script src="js/index.js"></script>
